Changed Login handler to seperate function and added swagger spec
