# docs/swagger.json
@@ -22,7 +22,7 @@
             "get": {
                 "description": "Returns the authenticated user",
                 "tags": [
-                    "auth"
+                    "user"
                 ],
                 "summary": "Get Authenticated User",
                 "responses": {
@@ -39,6 +39,20 @@
                     "default"
                 ],
                 "summary": "Returns the database health",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/login": {
+            "post": {
+                "description": "Logs in a user",
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Login Route",
                 "responses": {
                     "200": {
                         "description": "OK"
